 * Deprecated oldest LinearModelAlgorithm(X, basis, Y) and LinearModelStepwiseAlgorithm(X, basis, Y,...) ctors
 * Deprecated FunctionalChaos(Function, ...) ctors
 * Deprecated FunctionalChaosResult.getComposedModel, MetaModelResult.getModel
 * Deprecated (Process)Sample::computeCenteredMoment in favor of computeCentralMoment

=== Documentation ===
 * Added example galleries at the end of API doc pages

=== Python module ===
 * New experimental submodule introducing newest classes until stabilization

=== Miscellaneous ===

=== Bug fixes ===
 * #2097 (LinearModelStepwiseAlgorithm ctor order)
 * #2121 (GaussianProcess Gibbs sampling method issues)
 * #2123 (MixtureClassifier 'grade' method does not work with a Sample input)
 * #2125 (SciPyDistribution __init__ failure with scipy 1.9.0)


== 1.19 release (2022-05-10) == #release-1.19

=== Library ===

==== Major changes ====
 * HSIC sensitivity indices
 * RandomWalkMetropolisHastings now updates all components at a time, previously updated componentwise
 * Iterative statistics

==== New classes ====
 * RandomVectorMetropolisHastings
 * IndependentMetropolisHastings
 * Gibbs
 * HSICEstimatorConditionalSensitivity
 * HSICEstimatorGlobalSensitivity
 * HSICEstimatorTargetSensitivity
 * HSICUStat
 * HSICVStat
 * IterativeExtrema
 * IterativeMoments
 * IterativeThresholdExceedance
 * TensorProductExperiment
 * NAIS
 * Pagmo
 * GalambosCopula

==== API changes ====
 * Removed deprecated Hanning alias
 * Removed deprecated AdaptiveDirectionalSampling alias
 * Removed deprecated VisualTest::DrawCobWeb method
 * Removed deprecated shims module
 * Removed deprecated TBB.SetNumberOfThreads/GetNumberOfThreads
 * Removed deprecated MultiFORM.setMaximumNumberOfDesignPoints/getMaximumNumberOfDesignPoints
 * Removed deprecated SubsetSampling.getNumberOfSteps
 * coupling_tools.execute: deprecated get_stderr,get_stdout for capture_output, returns CompletedProcess