@@ -7,3 +7,4 @@ Drop deprecated LinearModelAlgorithm | LinearModelStepwiseAlgorithm ctors for 1.
 Remove FunctionalChaosAlgorithm(Function) ctors for 1.21
 Remove FunctionalChaosResult.getComposedModel, MetaModelResult.getModel and associated attributes for 1.21
 Remove (Process)Sample::computeCenteredMoment
+Remove Distribution::getCenteredMoment
