@@ -396,6 +396,9 @@ public:
   virtual Point getMoment(const UnsignedInteger n) const;
 
   /** Get the centered moments of the distribution */
+  virtual Point getCentralMoment(const UnsignedInteger n) const;
+
+  /** @deprecated */
   virtual Point getCenteredMoment(const UnsignedInteger n) const;
 
   /** Get the shifted moments of the distribution */
