@@ -609,11 +609,11 @@ Point PythonDistribution::getMoment(const UnsignedInteger n) const
 }
 
 /* Get the centered moments of the distribution */
-Point PythonDistribution::getCenteredMoment(const UnsignedInteger n) const
+Point PythonDistribution::getCentralMoment(const UnsignedInteger n) const
 {
-  if (PyObject_HasAttrString(pyObj_, const_cast<char *>("getCenteredMoment") ) )
+  if (PyObject_HasAttrString(pyObj_, const_cast<char *>("getCentralMoment") ) )
   {
-    ScopedPyObjectPointer methodName(convert< String, _PyString_>( "getCenteredMoment" ));
+    ScopedPyObjectPointer methodName(convert< String, _PyString_>( "getCentralMoment" ));
     ScopedPyObjectPointer nArg(convert< UnsignedInteger, _PyInt_ >( n ));
     ScopedPyObjectPointer callResult(PyObject_CallMethodObjArgs( pyObj_,
                                      methodName.get(),
@@ -628,7 +628,7 @@ Point PythonDistribution::getCenteredMoment(const UnsignedInteger n) const
   }
   else
   {
-    return DistributionImplementation::getCenteredMoment( n );
+    return DistributionImplementation::getCentralMoment( n );
   }
 }
 
